--- a/chat/chattemplates.html
+++ b/chat/chattemplates.html
@@ -3,23 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Messenger Clone</title>
-  <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
-    .container { display: flex; height: 100vh; }
-    .sidebar { width: 25%; background: #f4f4f4; padding: 10px; overflow-y: auto; }
-    .user { display: flex; align-items: center; padding: 8px; cursor: pointer; }
-    .user img { width: 40px; border-radius: 50%; margin-right: 10px; }
-    .chat-area { flex: 1; display: flex; flex-direction: column; }
-    .chat-header { background: #007bff; color: white; padding: 10px; }
-    .messages { flex: 1; overflow-y: auto; padding: 10px; }
-    .msg { margin: 5px; padding: 8px; border-radius: 8px; max-width: 70%; }
-    .sent { background: #dcf8c6; align-self: flex-end; }
-    .received { background: #fff; align-self: flex-start; border: 1px solid #ddd; }
-    .time { font-size: 10px; color: gray; margin-left: 5px; }
-    .chat-input { display: flex; padding: 10px; background: #eee; }
-    .chat-input input { flex: 1; padding: 8px; border: 1px solid #ccc; border-radius: 5px; }
-    .chat-input button { margin-left: 10px; padding: 8px 12px; border: none; background: #007bff; color: white; border-radius: 5px; cursor: pointer; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -27,7 +11,14 @@
   <!-- Sidebar -->
   <div class="sidebar">
     <h2>Users</h2>
-    <div id="userList"></div>
+    <div class="user" onclick="selectUser('Bob')">
+      <img src="https://robohash.org/bob?bgset=bg2" alt="">
+      <span>Bob</span>
+    </div>
+    <div class="user" onclick="selectUser('Charlie')">
+      <img src="https://robohash.org/charlie?bgset=bg2" alt="">
+      <span>Charlie</span>
+    </div>
   </div>
 
   <!-- Chat Area -->
@@ -42,71 +33,6 @@
   </div>
 </div>
 
-<script>
-let currentUser = null;
-const messagesDiv = document.getElementById("messages");
-const header = document.getElementById("chatHeader");
-const userListDiv = document.getElementById("userList");
-
-// fetch users from backend
-async function loadUsers() {
-  const res = await fetch("/users");
-  const users = await res.json();
-  userListDiv.innerHTML = "";
-
-  users.forEach(username => {
-    const div = document.createElement("div");
-    div.className = "user";
-    div.innerHTML = `
-      <img src="https://robohash.org/${username}?bgset=bg2" alt="">
-      <span>${username}</span>
-    `;
-    div.onclick = () => selectUser(username);
-    userListDiv.appendChild(div);
-  });
-}
-
-function selectUser(user) {
-  currentUser = user;
-  header.innerText = "Chat with " + user;
-  loadMessages();
-}
-
-async function sendMessage() {
-  if (!currentUser) {
-    alert("Select a user first!");
-    return;
-  }
-  const input = document.getElementById("msgInput");
-  if (input.value.trim() === "") return;
-
-  await fetch("/send", {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ user: currentUser, sender: "me", text: input.value })
-  });
-
-  input.value = "";
-  loadMessages();
-}
-
-async function loadMessages() {
-  if (!currentUser) return;
-  const res = await fetch("/messages/" + currentUser);
-  const msgs = await res.json();
-  messagesDiv.innerHTML = "";
-  msgs.forEach(([sender, text, time]) => {
-    const div = document.createElement("div");
-    div.className = sender === "me" ? "msg sent" : "msg received";
-    div.innerHTML = text + `<span class="time">${time}</span>`;
-    messagesDiv.appendChild(div);
-  });
-  messagesDiv.scrollTop = messagesDiv.scrollHeight;
-}
-
-// load users on startup
-loadUsers();
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
